--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,7 @@
     function formatTime(seconds) {
       const h = Math.floor(seconds / 3600);
       const m = Math.floor((seconds % 3600) / 60);
-      const s = seconds % 60;
-      return h + ":" + String(m).padStart(2, "0") + ":" + String(s).padStart(2, "0");
+      return h + "h " + String(m).padStart(2, "0") + "m";
     }
 
     fetch("/data.json")
@@ -44,10 +43,10 @@
           const tr = document.createElement("tr");
           tr.innerHTML =
             "<td>" + year + "</td>" +
-            "<td>" + y.count + "</td>" +
+            "<td>" + y.count.toLocaleString() + "</td>" +
             "<td>" + formatTime(y.time) + "</td>" +
-            "<td>" + y.distance.toFixed(1) + "</td>" +
-            "<td>" + Math.round(y.elevation) + "</td>";
+            "<td>" + y.distance.toLocaleString(undefined, {minimumFractionDigits: 1, maximumFractionDigits: 1}) + "</td>" +
+            "<td>" + Math.round(y.elevation).toLocaleString() + "</td>";
           tbody.appendChild(tr);
         }
       });
