--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Yearly Cycling Stats</title>
   <style>
-    body { font-family: system-ui, sans-serif; max-width: 720px; margin: 2rem auto; padding: 0 1rem; }
+    body { font-family: system-ui, sans-serif; max-width: 960px; margin: 2rem auto; padding: 0 1rem; }
     table { border-collapse: collapse; width: 100%; }
     th, td { padding: 0.5rem 1rem; text-align: right; border-bottom: 1px solid #ddd; }
     th { border-bottom: 2px solid #333; }
@@ -22,6 +22,8 @@
         <th>Time</th>
         <th>Distance (km)</th>
         <th>Elevation (m)</th>
+        <th>Avg km/wk</th>
+        <th>Avg m/wk</th>
       </tr>
     </thead>
     <tbody id="stats"></tbody>
@@ -33,6 +35,14 @@
       return h + "h " + String(m).padStart(2, "0") + "m";
     }
 
+    function weeksInYear(year) {
+      const now = new Date();
+      const yr = parseInt(year);
+      if (yr < now.getFullYear()) return 52;
+      const start = new Date(yr, 0, 1);
+      return Math.max(1, (now - start) / (7 * 24 * 60 * 60 * 1000));
+    }
+
     fetch("/data.json")
       .then(res => res.json())
       .then(data => {
@@ -40,13 +50,16 @@
         const years = Object.keys(data).sort((a, b) => a - b);
         for (const year of years) {
           const y = data[year];
+          const weeks = weeksInYear(year);
           const tr = document.createElement("tr");
           tr.innerHTML =
             "<td>" + year + "</td>" +
             "<td>" + y.count.toLocaleString() + "</td>" +
             "<td>" + formatTime(y.time) + "</td>" +
             "<td>" + y.distance.toLocaleString(undefined, {minimumFractionDigits: 1, maximumFractionDigits: 1}) + "</td>" +
-            "<td>" + Math.round(y.elevation).toLocaleString() + "</td>";
+            "<td>" + Math.round(y.elevation).toLocaleString() + "</td>" +
+            "<td>" + (y.distance / weeks).toFixed(1) + "</td>" +
+            "<td>" + Math.round(y.elevation / weeks).toLocaleString() + "</td>";
           tbody.appendChild(tr);
         }
       });
