--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
                             const weeks = weeksInYear(year);
                             const tr = document.createElement("tr");
                             tr.innerHTML =
-                                "<td>" + year + "</td>" +
+                                "<th>" + year + "</th>" +
                                 "<td>" + y.count.toLocaleString() + "</td>" +
                                 "<td>" + formatTime(y.time) + "</td>" +
                                 "<td>" + y.distance.toLocaleString(undefined, {minimumFractionDigits: 1, maximumFractionDigits: 1}) + "</td>" +
