--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Yearly Cycling Stats</title>
+        <title>I ❤️ riding bikes</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="base.css">
         <link rel="stylesheet" href="local.css">
     </head>
     <body>
         <main>
-            <h1>Yearly Cycling Stats</h1>
+            <h1>I ❤️ riding bikes</h1>
             <canvas id="chart" style="width:100%"></canvas>
             <table>
                 <thead>
@@ -63,7 +63,7 @@
                     const maxKm = Math.ceil(Math.max(...avgKmPerWk) / 25) * 25;
                     const maxElev = Math.ceil(Math.max(...avgMPerWk) / 500) * 500;
 
-                    ctx.font = "12px system-ui, sans-serif";
+                    ctx.font = "12px 'IBM Plex Mono', monospace";
 
                     // Y gridlines (left axis)
                     ctx.textAlign = "right";
