--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>I ❤️ riding bikes</title>
+        <title>🚴stradeviola😈‍</title>
         <link rel="stylesheet" href="reset.css">
         <link rel="stylesheet" href="base.css">
         <link rel="stylesheet" href="local.css">
     </head>
     <body>
         <main>
-            <h1>I ❤️ riding bikes</h1>
+            <h1 class="center">🚴<span class="fg-green">strade</span><span class="fg-purple">viola</span>😈‍</h1>
             <canvas id="chart" style="width:100%"></canvas>
             <table>
                 <thead>
@@ -54,8 +54,8 @@
                     canvas.height = cssHeight * dpr;
                     ctx.scale(dpr, dpr);
 
-                    const kmColor = "#2563eb";
-                    const elevColor = "#d97706";
+                    const kmColor = "hsl(120, 100%, 25%)";
+                    const elevColor = "hsl(300, 100%, 25%)";
                     const pad = {top: 20, right: 55, bottom: 40, left: 50};
                     const w = cssWidth - pad.left - pad.right;
                     const h = cssHeight - pad.top - pad.bottom;
